--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: "Montserrat";
     font-size: 16px;
@@ -40,9 +39,10 @@ body {
 
 }
 
-.formulario{
+.formulario {
     display: flex;
     align-items: center;
+    margin-left: auto; 
 }
 
 #buscador-header{
@@ -61,5 +61,5 @@ body {
     padding: 6px;
     border: 2px solid;
     border-color: black;
-    font-size: 12px;
+    font-size: 12px;
 }
