--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -67,3 +67,9 @@
 .btn-dark:hover {
   background-color: gray !important;
 }
+
+.titulo {
+  color: goldenrod;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
